# web_test

./: .gitignore  README.md
httptest/: Cargo.toml
httptest/http/src/: httprequest.rs  httpresponse.rs
httptest/httpserver/: Cargo.toml
httptest/httpserver/data/: orders.json
httptest/httpserver/public/: health.html  index.html
httptest/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
httptest/tcpclient/: Cargo.toml
httptest/tcpclient/src/: main.rs
httptest/tcpserver/: Cargo.toml
httptest/tcpserver/src/: main.rs
webapp/: .env  Cargo.toml
webapp/src/: errors.rs  handlers.rs  main.rs  models.rs  routers.rs
webapp/static/: register.html  teachers.html
webservice/: .env  Cargo.toml  SELECT  FROM `test`.sql  mysql.sql  use test;.sql
webservice/src/: error.rs  lib.rs  main.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  mod.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
