[package]
name = "webservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web="4.8.0"
actix-rt = { version = "2.10.0" }
serde = {version = "1.0.203",features=["derive"]}
chrono = {version="0.4.38",features=["serde"]}
dotenv="0.15.0"
sqlx = { version = "0.7.4", features = ["mysql", "macros", "chrono", "runtime-tokio","uuid"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }